erDiagram
    users ||--o| user_preferences : "偏好1对1"
    users ||--o{ auth_sessions : "会话1对多"
    users ||--o{ family_contacts : "家属1对多"
    users ||--o| family_push_rules : "推送规则1对1"
    users ||--o{ media_files : "媒体1对多"
    users ||--o{ voice_recognize_jobs : "语音识别1对多"
    users ||--o{ qa_sessions : "问询1对多"
    users ||--o{ qa_recommendations : "就医建议1对多"
    users ||--o{ medical_archives : "就诊档案1对多"
    users ||--o{ archive_ocr_jobs : "OCR任务1对多"
    users ||--o{ health_summaries : "健康总结1对多"
    users ||--o{ health_reports : "体检报告1对多"
    users ||--o{ archive_shares : "推送记录1对多"
    users ||--o{ archive_exports : "导出任务1对多"

    media_files ||--o{ voice_recognize_jobs : "语音文件"
    media_files ||--o{ qa_sessions : "问询音频"
    media_files ||--o{ medical_archives : "就诊单图片"
    media_files ||--o{ archive_ocr_jobs : "OCR图片"
    media_files ||--o{ health_reports : "报告PDF"
    media_files ||--o{ archive_exports : "导出PDF"

    voice_recognize_jobs ||--o{ qa_sessions : "识别结果"
    qa_sessions ||--o| qa_recommendations : "建议1对1"

    medical_archives ||--o{ archive_shares : "推送档案"
    medical_archives ||--o{ archive_exports : "导出档案"
    family_contacts ||--o{ archive_shares : "推送对象"

    health_summaries ||--o{ health_summary_items : "总结条目"
    health_reports ||--o{ health_report_findings : "异常项"

    users["用户 users"] {
        string id PK "主键UUID"
        string phone UK "登录手机号"
        string password_hash "密码哈希可空"
        string display_name "展示名"
        string preferred_lang "语言zh或en"
        string status "active或disabled"
        datetime created_at "创建时间UTC"
        datetime updated_at "更新时间UTC"
        datetime deleted_at "软删除时间"
    }

    sms_codes["短信验证码 sms_codes"] {
        string id PK "主键"
        string phone "接收手机号"
        string code "验证码"
        string purpose "login或reset_password"
        datetime expires_at "过期时间"
        datetime used_at "使用时间"
        string request_ip "请求IP"
        datetime created_at "发送时间"
    }

    auth_sessions["登录会话 auth_sessions"] {
        string id PK "主键"
        string user_id FK "所属用户"
        string refresh_token_hash UK "刷新令牌哈希"
        string device_info "设备信息"
        datetime expires_at "会话过期"
        datetime revoked_at "注销时间"
        datetime created_at "登录时间"
    }

    user_preferences["用户偏好 user_preferences"] {
        string user_id PK,FK "用户主键兼外键"
        string preferred_lang "界面语言"
        float font_scale "字体缩放预留"
        boolean high_contrast "高对比预留"
        datetime updated_at "更新时间"
    }

    media_files["媒体文件 media_files"] {
        string id PK "主键"
        string user_id FK "所属用户"
        string kind "audio或image或pdf"
        string mime_type "MIME类型"
        string storage_key "存储路径"
        string url "访问URL"
        int size_bytes "文件大小"
        string checksum "校验和"
        datetime created_at "上传时间"
        datetime deleted_at "软删除"
    }

    voice_recognize_jobs["语音识别 voice_recognize_jobs"] {
        string id PK "主键"
        string user_id FK "所属用户"
        string media_id FK "音频文件"
        string lang "识别语言"
        string recognized_text "识别文本"
        int duration_ms "时长毫秒"
        string status "pending或succeeded或failed"
        string error_message "失败原因"
        datetime created_at "创建时间"
    }

    qa_sessions["问询会话 qa_sessions"] {
        string id PK "主键"
        string user_id FK "所属用户"
        string lang "问答语言"
        string input_mode "voice或text"
        string question_text "用户问题"
        string answer_text "系统回答"
        string audio_media_id FK "关联音频"
        string voice_job_id FK "关联识别任务"
        datetime created_at "创建时间"
        datetime deleted_at "软删除"
    }

    qa_recommendations["就医建议 qa_recommendations"] {
        string id PK "主键"
        string session_id FK,UK "对应问询会话唯一"
        string user_id FK "所属用户"
        string title "标题"
        string body "建议正文"
        string risk_level "low或medium或high"
        string disclaimer "免责声明"
        datetime created_at "生成时间"
    }

    medical_archives["就诊单档案 medical_archives"] {
        string id PK "主键"
        string user_id FK "所属用户"
        string diagnosis "诊断"
        string medicine "用药"
        date visit_date "就诊日期"
        string raw_ocr_text "OCR原文"
        string image_media_id FK "病历图片"
        string source "camera或album"
        datetime created_at "创建时间"
        datetime updated_at "更新时间"
        datetime deleted_at "软删除"
    }

    archive_ocr_jobs["档案OCR任务 archive_ocr_jobs"] {
        string id PK "主键"
        string user_id FK "所属用户"
        string image_media_id FK "图片文件"
        string source "camera或album"
        string diagnosis "识别诊断"
        string medicine "识别用药"
        date visit_date "识别就诊日"
        string raw_ocr_text "OCR原文"
        string status "任务状态"
        datetime created_at "创建时间"
    }

    health_summaries["健康问题总结 health_summaries"] {
        string id PK "主键"
        string user_id FK "所属用户"
        string title "标题"
        date exam_date "最近检查日"
        string exam_no "检查号"
        string summary_text "总结正文"
        datetime created_at "创建时间"
        datetime updated_at "更新时间"
        datetime deleted_at "软删除"
    }

    health_summary_items["总结条目 health_summary_items"] {
        string id PK "主键"
        string summary_id FK "所属总结"
        int sort_order "排序"
        string content "条目内容"
        string severity "严重程度可选"
        datetime created_at "创建时间"
    }

    health_reports["健康档案报告 health_reports"] {
        string id PK "主键"
        string user_id FK "所属用户"
        string patient_name "报告姓名"
        date exam_date "体检日期"
        string org_name "机构名"
        string voucher_no "检查凭证号"
        string report_type "报告类型徽章"
        string pdf_media_id FK "报告PDF"
        string raw_payload "原始JSON"
        datetime created_at "创建时间"
        datetime updated_at "更新时间"
        datetime deleted_at "软删除"
    }

    health_report_findings["报告异常项 health_report_findings"] {
        string id PK "主键"
        string report_id FK "所属报告"
        int sort_order "排序"
        string title "异常标题"
        string suggestion "建议文案"
        string risk_level "风险等级"
        datetime created_at "创建时间"
    }

    report_glossaries["术语释义 report_glossaries"] {
        string id PK "主键"
        string term "术语名"
        string definition "释义"
        int sort_order "排序"
        boolean enabled "是否启用"
        datetime created_at "创建时间"
    }

    family_contacts["家属联系人 family_contacts"] {
        string id PK "主键"
        string user_id FK "所属用户"
        string name "称呼如女儿"
        string phone "联系电话"
        string relation "daughter或son或other"
        datetime created_at "创建时间"
        datetime updated_at "更新时间"
        datetime deleted_at "软删除"
    }

    family_push_rules["家属推送规则 family_push_rules"] {
        string user_id PK,FK "用户主键兼外键"
        boolean on_record_saved "就诊单保存后推送"
        boolean on_abnormal "异常指标提醒"
        boolean on_visit "就诊复查提醒"
        datetime updated_at "更新时间"
    }

    archive_shares["档案推送 archive_shares"] {
        string id PK "主键"
        string archive_id FK "就诊档案"
        string user_id FK "发起用户"
        string contact_id FK "家属联系人"
        string message "留言"
        string status "queued或sent或failed"
        datetime created_at "创建时间"
        datetime sent_at "发送时间"
    }

    archive_exports["档案导出 archive_exports"] {
        string id PK "主键"
        string archive_id FK "就诊档案"
        string user_id FK "所属用户"
        string pdf_media_id FK "导出PDF"
        string download_url "下载链接"
        datetime expires_at "链接过期"
        string status "pending或ready或failed"
        datetime created_at "创建时间"
    }

    audit_logs["审计日志 audit_logs"] {
        int id PK "自增主键"
        string user_id "操作用户可空"
        string action "动作如login"
        string resource "资源类型"
        string resource_id "资源ID"
        string detail "详情JSON"
        string ip "IP"
        datetime created_at "记录时间"
    }
